Add the title and the rules

--- a/www/rules.html
+++ b/www/rules.html
@@ -1,42 +1,108 @@
 <!DOCTYPE html>
 <html lang="sv">
-  <head>
-		<title>Spelregler</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
-    <!-- Application specific CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+<head>
+	<title>Spelregler</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  </head>
-  <body>
-		<header></header>
-		<main>
-			<div class="row">
-				<div class="col-12">
-					<h2>Spelregler</h2>
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
+	<!-- Application specific CSS -->
+
+
+	<!-- ??? rules.css 追加 -->
+	<link rel="stylesheet" href="/css/rules.css">
+	<link rel="stylesheet" href="/css/main.css">
+
+
+
+
+
+</head>
+
+<body>
+	<header></header>
+	<main class="container my-5">
+		<div class="row">
+			<div class="col-12">
+				<!-- <div class="markers my-2"> -->
+					<ul class="markers my-4 d-flex justify-content-center">
+						<li></li>
+						<li></li>
+						<li class="yellow"></li>
+						<li class="yellow"></li>
+						<li></li>
+						<li></li>
+						<li class="yellow"></li>
+						<li></li>
+					</ul>
+					<h2 class="font-weight-bold text-center">Hur man spelar 4 i rad</h2>
+					<!-- <div class="markers my-2"> -->
+						<ul class="markers my-4 d-flex justify-content-center">
+							<li></li>
+							<li class="yellow"></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li class="yellow"></li>
+							<li></li>
+						</ul>
+					</div>
+
+
 				</div>
+
+				<!-- text start-->
+				<div class="row my-4">
+					<div class="col-8">
+						<h3>Placera 4 av dina marker i en vertilal, horisontell eller diagonal rad!</h3>
+						<ul>
+							<li>Välj färg. Tag 21 marker i samma färg.</li>
+							<li>Stoppa första markern i valfri öppning på spelbrädet.</li>
+							<li>Spelarna turas om att placera 1 marker per drag.</li>
+							<li>Försök sätta en vinnande rad, samtidigt som du hindrar motspelaren från att vinna.</li>
+							<li>Första spelaren som placerar fyra marker i rad vinner.</li>
+							<li>Lyft brädet uppåt när spelet är över, så faller markerna ner i förvaringsasken.</li>
+						</ul>
+
+
+					</div>
+
+
+					<!-- picture start-->
+					<div class="col-4">
+
+					</div>
+				</div>
+
+
+
+
+
+
+
 			</div>
 
 
 
 
 
-		</main>
-		<footer></footer>
+	</main>
+	<footer></footer>
 
 
 
 
 
-    <!-- JavaScript libraries -->
-    <script src="/jsonflex.js"></script>
-    <script src="/js/libs/jquery-3.2.1.js"></script>
-    <script src="/js/libs/popper-1.11.0.js"></script>
-    <script src="/js/libs/bootstrap-4-beta.js"></script>
-    <!-- Application specific JavaScript -->
-    <script src="/js/main.js"></script>
-  </body>
+	<!-- JavaScript libraries -->
+	<script src="/jsonflex.js"></script>
+	<script src="/js/libs/jquery-3.2.1.js"></script>
+	<script src="/js/libs/popper-1.11.0.js"></script>
+	<script src="/js/libs/bootstrap-4-beta.js"></script>
+	<!-- Application specific JavaScript -->
+	<script src="/js/main.js"></script>
+</body>
+
 </html>
