Edit the texts in the game rules and add Bootstrups "Cards" (3st).

--- a/www/rules.html
+++ b/www/rules.html
@@ -27,63 +27,107 @@
 		<div class="row">
 			<div class="col-12">
 				<!-- <div class="markers my-2"> -->
-					<ul class="markers my-4 d-flex justify-content-center">
-						<li></li>
-						<li></li>
-						<li class="yellow"></li>
-						<li class="yellow"></li>
-						<li></li>
-						<li></li>
-						<li class="yellow"></li>
-						<li></li>
-					</ul>
-					<h2 class="font-weight-bold text-center">Hur man spelar 4 i rad</h2>
-					<!-- <div class="markers my-2"> -->
-						<ul class="markers my-4 d-flex justify-content-center">
-							<li></li>
-							<li class="yellow"></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li class="yellow"></li>
-							<li></li>
-						</ul>
-					</div>
-
-
-				</div>
-
-				<!-- text start-->
-				<div class="row my-4">
-					<div class="col-8">
-						<h3>Placera 4 av dina marker i en vertilal, horisontell eller diagonal rad!</h3>
-						<ul>
-							<li>Välj färg. Tag 21 marker i samma färg.</li>
-							<li>Stoppa första markern i valfri öppning på spelbrädet.</li>
-							<li>Spelarna turas om att placera 1 marker per drag.</li>
-							<li>Försök sätta en vinnande rad, samtidigt som du hindrar motspelaren från att vinna.</li>
-							<li>Första spelaren som placerar fyra marker i rad vinner.</li>
-							<li>Lyft brädet uppåt när spelet är över, så faller markerna ner i förvaringsasken.</li>
-						</ul>
-
-
-					</div>
-
-
-					<!-- picture start-->
-					<div class="col-4">
-
-					</div>
-				</div>
-
-
-
-
-
-
-
+				<ul class="markers my-4 d-flex justify-content-center">
+					<li></li>
+					<li></li>
+					<li class="yellow"></li>
+					<li class="yellow"></li>
+					<li></li>
+					<li></li>
+					<li class="yellow"></li>
+					<li></li>
+				</ul>
+				<h2 class="font-weight-bold text-center ml-4">Hur man spelar 4 i rad</h2>
+				<!-- <div class="markers my-2"> -->
+				<ul class="markers my-4 d-flex justify-content-center">
+					<li></li>
+					<li class="yellow"></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li class="yellow"></li>
+					<li></li>
+				</ul>
 			</div>
+		</div>
+
+
+		<!-- text start-->
+		<div class="row my-4">
+			<div class="col-12 mb-5">
+				<h3 class="text-center mt-4">Placera 4 av dina marker i en vertilal, horisontell eller diagonal rad!</h3>
+			</div>
+
+
+			<!-- test-2 start -->
+
+			<div class="col-md-4">
+				<div class="card" style="width: 20rem;">
+					<img class="card-img-top" src="/images/img-rules/rules-2.png" alt="Card image cap">
+					<div class="card-body">
+						<h4 class="card-title">Klicka column</h4>
+						<p class="card-text">1. Värja färg. Tag 21 marker i samma färg.</p>
+						<p class="card-text">2. Stoppa första markern i valfri öppning på spelbrädet.</p>
+						<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<div class="card" style="width: 20rem;">
+					<img class="card-img-top" src="/images/img-rules/rules-3.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h4 class="card-title">Kolla alla riktningar</h4>
+						<p class="card-text">3. Spelarna turas om att placera 1 marker per drag.</p>
+						<p class="card-text">4. Försök sätta en vinnande rad, samtidigt som du hindrar motspelaren från att vinna.</p>
+						<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<div class="card" style="width: 20rem;">
+					<img class="card-img-top" src="/images/img-rules/rules-1.png" alt="Card image cap">
+					<div class="card-body">
+						<h4 class="card-title">Resultet</h4>
+						<p class="card-text">5. Första spelaren som placerar fyra marker i rad vinner.</p>
+						<p class="card-text">6. Lyft brädet uppåt när spelet är över, så faller markerna ner i förvaringsasken.</p>
+						<a href="#" class="btn btn-warning text-light">Börja spela</a>
+					</div>
+				</div>
+			</div>
+
+
+			<!-- test-2 end -->
+<!-- 
+			<div class="col-8">
+				<ul class="mt-3">
+					<li class="mb-3">Välj färg. Tag 21 marker i samma färg.</li>
+					<li class="mb-3">Stoppa första markern i valfri öppning på spelbrädet.</li>
+					<li class="mb-3">Spelarna turas om att placera 1 marker per drag.</li>
+					<li class="mb-3">Försök sätta en vinnande rad, samtidigt som du hindrar motspelaren från att vinna.</li>
+					<li class="mb-3">Första spelaren som placerar fyra marker i rad vinner.</li>
+					<li class="mb-3">Lyft brädet uppåt när spelet är över, så faller markerna ner i förvaringsasken.</li>
+				</ul>
+			</div> -->
+
+
+			<!-- picture start-->
+			<!-- <div class="col-4">
+				<img src="/images/img-rules/rules-5.jpg" alt="spelet 4 i rad" class="mt-2">
+
+				<figure class="figure">
+					<img src="/images/img-rules/rules-5.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+					<figcaption class="figure-caption">A caption for the above image.</figcaption>
+				</figure>
+			</div> -->
+
+
+		</div>
+
+
+
 
 
 
