--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,64 @@
   </head>
   <body>
 
+    <header>
+      <div class="container-fluid">
+        <div class="row">
+          <nav class="col ml-3 mr-3 mt-3 navbar navbar-expand-lg navbar-dark bg-secondary">
+            <h1>4 i rad</h1>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse ml-5" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active pl-5">
+                  <a class="nav-link" href="index.html">Start<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="/dagens/index.html">Spela</a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="/pizza/index.html">Spelregler</a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="#">HiScore</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <body>
+      <article>
+        <section class="container-fluid">
+          <div class="row">
+              <div class="jumbotron col mt-5 ml-5">
+                <h1 class="display-3">Välkommen!</h1>
+                <hr class="my-4">
+                <p>Spela det klassiska spelet 4 i rad online!</p>
+                <p class="lead">
+                  <a class="btn btn-light mt-4 float-right btn-lg" href="#" role="button">Spela!</a>
+                </p>
+              </div>
+            <div class="col">
+              <div class="fyrairadimg mt-5 mr-4">
+                <img src="/img/fyrairad.png">
+              </div>
+            </div>
+          </div>
+          <div class="row w-25">
+            <div class="buttonsnav col mt-5 ml-5 mr-5 pl-5 bg-secondary">
+              <h1>Andra spel online!</h1>
+                <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 1</button>
+                <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 2</button>
+                <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 3</button>
+            </div>
+          </div>
+        </section>
+      </article>
+    </body>
 
     <!-- JavaScript libraries -->
     <script src="/jsonflex.js"></script>
