Lagt till footer och testat.

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
     <!-- Application specific CSS -->
+    <link rel="stylesheet" href="box-sizing.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/main.css">
 
   </head>
@@ -70,6 +72,29 @@
           </div>
         </section>
       </article>
+
+      <main>
+
+      </main>
+
+      <footer>
+        <div>
+          <p>Adress:</p>
+          <p>Kungsgatan 88</p>
+          <p>Malmö, Sweden</p>
+        </div>
+        <div>
+          <p>http://www.fourinalinegame.se</p>
+          <p>email: info@fourinalinegame.se</p>
+          <p>email: anja@fourinalinegame.se</p>
+        </div>
+        <div>
+          <p>Kontakt:  Anna Karlsson</p>
+          <p>Telefon:  +46(0)123456789</p>
+          <p>Mobil:    +46(0)123456789</p>
+        </div>
+
+      </footer>
     </body>
 
     <!-- JavaScript libraries -->
