--- a/www/spel.html
+++ b/www/spel.html
@@ -28,13 +28,13 @@
                   <a class="nav-link" href="index.html">Start<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item pl-5">
-                  <a class="nav-link" href="/dagens/index.html">Spela</a>
+                  <a class="nav-link" href="spel.html">Spela</a>
                 </li>
                 <li class="nav-item pl-5">
                   <a class="nav-link" href="/pizza/index.html">Spelregler</a>
                 </li>
                 <li class="nav-item pl-5">
-                  <a class="nav-link" href="#">HiScore</a>
+                  <a class="nav-link" href="hiscore.html">HiScore</a>
                 </li>
               </ul>
             </div>
@@ -93,7 +93,7 @@
     <!-- Application specific JavaScript -->
     <script src="/js/classes/base.class.js"></script>
     <script src="/js/classes/player.class.js"></script>
-    <script src="/js/classes/spel-setup.class.js"></script>
+    <script src="/js/classes/game.class.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
