--- a/www/hiscore.html
+++ b/www/hiscore.html
@@ -45,18 +45,18 @@
     <main>
       <article>
         <section class="container">
-          <div class="row">
-            <div class="col-12">
+          <div class="row mt-4">
+            <div class="col-8 mx-auto">
               <ul class="list-group">
-                <li class="list-group-item d-flex justify-content-between align-items-center">
+                <li class="list-group-item d-flex justify-content-between align-items-center mt-2">
                   Spelare 1
                   <span class="badge badge-primary badge-pill">14</span>
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
+                <li class="list-group-item d-flex justify-content-between align-items-center mt-2">
                   Spelare 2
                   <span class="badge badge-primary badge-pill">2</span>
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
+                <li class="list-group-item d-flex justify-content-between align-items-center mt-2">
                   Spelare 3
                   <span class="badge badge-primary badge-pill">1</span>
                 </li>
