--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="sv">
   <head>
-
+    <title>4 i rad</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -31,7 +31,7 @@
                   <a class="nav-link" href="spel.html">Spela</a>
                 </li>
                 <li class="nav-item pl-5">
-                  <a class="nav-link" href="/pizza/index.html">Spelregler</a>
+                  <a class="nav-link" href="rules.html">Spelregler</a>
                 </li>
                 <li class="nav-item pl-5">
                   <a class="nav-link" href="hiscore.html">HiScore</a>
