--- a/www/rules.html
+++ b/www/rules.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
 <html lang="sv">
+  <head>
 
-<head>
-	<title>Spelregler</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
-	<!-- Application specific CSS -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
+    <!-- Application specific CSS -->
+    <link rel="stylesheet" href="box-sizing.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/main.css">
+
+  </head>
+  <body>
+    <header>
+      <div class="container-fluid">
+        <div class="row">
+          <nav class="col ml-3 mr-3 mt-3 navbar navbar-expand-lg navbar-dark bg-secondary">
+            <h1>4 i rad</h1>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse ml-5" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active pl-5">
+                  <a class="nav-link" href="index.html">Start<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="spel.html">Spela</a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="rules.html">Spelregler</a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="hiscore.html">HiScore</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </header>
 
 
-	<!-- ??? rules.css 追加 -->
-	<link rel="stylesheet" href="/css/rules.css">
-	<link rel="stylesheet" href="/css/main.css">
 
 
-
-
-
-</head>
-
-<body>
-	<header></header>
-	<main class="container my-5">
+	<main class="rules container my-5">
 		<div class="row">
 			<div class="col-12">
 				<!-- <div class="markers my-2"> -->
@@ -58,83 +81,88 @@
 			<div class="col-12 mb-5">
 				<h3 class="text-center mt-4">Placera 4 av dina marker i en vertilal, horisontell eller diagonal rad!</h3>
 			</div>
+		</div>
 
 
 			<!-- test-2 start -->
 
-			<div class="col-md-4">
-				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="/images/img-rules/rules-2.png" alt="Card image cap">
-					<div class="card-body">
-						<h4 class="card-title">Klicka column</h4>
-						<p class="card-text">1. Värja färg. Tag 21 marker i samma färg.</p>
-						<p class="card-text">2. Stoppa första markern i valfri öppning på spelbrädet.</p>
-						<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+
+
+			<div class="row">
+
+				<div class="col-12 col-md-4 mb-5">
+					<div class="card">
+						<!-- <div class="card" style="width: 20rem;"> -->
+						<img class="card-img-top" src="/img/rules/rules-2.png" alt="Card image cap">
+						<div class="card-body">
+							<h4 class="card-title">Klicka column</h4>
+							<p class="card-text">1. Värja färg. Tag 21 marker i samma färg.</p>
+							<p class="card-text">2. Stoppa första markern i valfri öppning på spelbrädet.</p>
+							<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+						</div>
+						<!-- </div> -->
 					</div>
 				</div>
-			</div>
 
-			<div class="col-md-4">
-				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="/images/img-rules/rules-3.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h4 class="card-title">Kolla alla riktningar</h4>
-						<p class="card-text">3. Spelarna turas om att placera 1 marker per drag.</p>
-						<p class="card-text">4. Försök sätta en vinnande rad, samtidigt som du hindrar motspelaren från att vinna.</p>
-						<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+				<div class="col-12 col-md-4 mb-5">
+					<div class="card">
+						<!-- <div class="card" style="width: 20rem;"> -->
+						<img class="card-img-top" src="/img/rules/rules-3.jpg" alt="Card image cap">
+						<div class="card-body">
+							<h4 class="card-title">Kolla alla riktningar</h4>
+							<p class="card-text">3. Spelarna turas om att placera 1 marker per drag.</p>
+							<p class="card-text">4. Försök sätta en vinnande rad, samtidigt som du hindrar motspelaren från att vinna.</p>
+							<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="col-md-4">
-				<div class="card" style="width: 20rem;">
-					<img class="card-img-top" src="/images/img-rules/rules-1.png" alt="Card image cap">
-					<div class="card-body">
-						<h4 class="card-title">Resultet</h4>
-						<p class="card-text">5. Första spelaren som placerar fyra marker i rad vinner.</p>
-						<p class="card-text">6. Lyft brädet uppåt när spelet är över, så faller markerna ner i förvaringsasken.</p>
-						<a href="#" class="btn btn-warning text-light">Börja spela</a>
+				<div class="col-12 col-md-4 mb-5">
+					<div class="card">
+						<img class="card-img-top" src="/img/rules/rules-1.png" alt="Card image cap">
+						<div class="card-body">
+							<h4 class="card-title">Resultet</h4>
+							<p class="card-text">5. Första spelaren som placerar fyra marker i rad vinner.</p>
+							<p class="card-text">6. Lyft brädet uppåt när spelet är över, så faller markerna ner i förvaringsasken.</p>
+							<a href="#" class="btn btn-warning text-light">Börja spela</a>
+						</div>
 					</div>
 				</div>
+
+
+				<!-- test-2 end -->
+
+
+				<!-- </div> -->
 			</div>
-
-
-			<!-- test-2 end -->
-<!-- 
-			<div class="col-8">
-				<ul class="mt-3">
-					<li class="mb-3">Välj färg. Tag 21 marker i samma färg.</li>
-					<li class="mb-3">Stoppa första markern i valfri öppning på spelbrädet.</li>
-					<li class="mb-3">Spelarna turas om att placera 1 marker per drag.</li>
-					<li class="mb-3">Försök sätta en vinnande rad, samtidigt som du hindrar motspelaren från att vinna.</li>
-					<li class="mb-3">Första spelaren som placerar fyra marker i rad vinner.</li>
-					<li class="mb-3">Lyft brädet uppåt när spelet är över, så faller markerna ner i förvaringsasken.</li>
-				</ul>
-			</div> -->
-
-
-			<!-- picture start-->
-			<!-- <div class="col-4">
-				<img src="/images/img-rules/rules-5.jpg" alt="spelet 4 i rad" class="mt-2">
-
-				<figure class="figure">
-					<img src="/images/img-rules/rules-5.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-					<figcaption class="figure-caption">A caption for the above image.</figcaption>
-				</figure>
-			</div> -->
-
-
-		</div>
-
-
-
-
+			<!-- Ends of row -->
 
 
 
 
 	</main>
-	<footer></footer>
+
+
+
+ <footer>
+      <div>
+        <p>Adress:</p>
+        <p>Kungsgatan 88</p>
+        <p>Malmö, Sweden</p>
+      </div>
+      <div>
+        <p>http://www.fourinalinegame.se</p>
+        <p>email: info@fourinalinegame.se</p>
+        <p>email: anja@fourinalinegame.se</p>
+      </div>
+      <div>
+        <p>Kontakt:  Anna Karlsson</p>
+        <p>Telefon:  +46(0)123456789</p>
+        <p>Mobil:    +46(0)123456789</p>
+      </div>
+ 
+
+	</footer>
 
 
 
