Lagt tre classer till och fixat lite på header.

--- a/www/hiscore.html
+++ b/www/hiscore.html
@@ -15,10 +15,10 @@
   </head>
   <body>
     <header>
-      <div class="container-fluid">
+      <div class="container-fluid p-0">
         <div class="row">
-          <nav class="col ml-3 mr-3 mt-3 navbar navbar-expand-lg navbar-dark bg-secondary">
-            <h1>4 i rad</h1>
+          <nav class="col ml-3 mr-3 navbar navbar-expand-lg navbar-dark bg-secondary">
+            <h2>Fyra i rad</h2>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
