--- a/www/index.html
+++ b/www/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <header>
-      <div class="container-fluid">
+      <div class="container-fluid p-0">
         <div class="row">
-          <nav class="col ml-3 mr-3 mt-3 navbar navbar-expand-lg navbar-dark bg-secondary">
+          <nav class="col ml-3 mr-3 navbar-expand-lg navbar-dark bg-secondary">
             <h1>4 i rad</h1>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
