--- a/www/rules.html
+++ b/www/rules.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="sv">
-  <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+	<title>4 i rad</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
-    <!-- Application specific CSS -->
-    <link rel="stylesheet" href="box-sizing.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/main.css">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
+	<!-- Application specific CSS -->
+	<link rel="stylesheet" href="box-sizing.css">
+	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/main.css">
 
-  </head>
-  <body>
-    <header>
-      <div class="container-fluid p-0">
-        <div class="row">
-          <nav class="col ml-3 mr-3 navbar navbar-expand-lg navbar-dark bg-secondary">
-            <h1>4 i rad</h1>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse ml-5" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active pl-5">
-                  <a class="nav-link" href="index.html">Start<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="spel.html">Spela</a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="rules.html">Spelregler</a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="hiscore.html">HiScore</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </div>
-    </header>
+</head>
 
-
+<body>
+	<header>
+		<div class="container-fluid p-0">
+			<div class="row">
+				<nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
+					<h1>4 i rad</h1>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+					 aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse ml-5" id="navbarNav">
+						<ul class="navbar-nav">
+							<li class="nav-item active pl-5">
+								<a class="nav-link" href="/">Start
+									<span class="sr-only">(current)</span>
+								</a>
+							</li>
+							<li class="nav-item pl-5">
+								<a class="nav-link" href="spel.html">Spela</a>
+							</li>
+							<li class="nav-item pl-5">
+								<a class="nav-link" href="rules.html">Spelregler</a>
+							</li>
+							<li class="nav-item pl-5">
+								<a class="nav-link" href="hiscore.html">HiScore</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+		</div>
+	</header>
 
 
 	<main class="rules container my-5">
@@ -52,120 +55,104 @@
 				<!-- <div class="markers my-2"> -->
 				<ul class="markers my-4 d-flex justify-content-center">
 					<li></li>
-					<li></li>
+					<li class="hide"></li>
+					<li class="yellow hide"></li>
 					<li class="yellow"></li>
-					<li class="yellow"></li>
-					<li></li>
-					<li></li>
+					<li class=" hide"></li>
+					<li class=></li>
 					<li class="yellow"></li>
 					<li></li>
 				</ul>
-				<h2 class="font-weight-bold text-center ml-4">Hur man spelar 4 i rad</h2>
+				<h2 class="font-weight-bold text-center">Hur man spelar 4 i rad</h2>
 				<!-- <div class="markers my-2"> -->
 				<ul class="markers my-4 d-flex justify-content-center">
 					<li></li>
 					<li class="yellow"></li>
 					<li></li>
 					<li></li>
-					<li></li>
-					<li></li>
 					<li class="yellow"></li>
-					<li></li>
+					<li class="hide"></li>
+					<li class="yellow hide"></li>
+					<li class="hide"></li>
 				</ul>
 			</div>
 		</div>
 
-
 		<!-- text start-->
 		<div class="row my-4">
 			<div class="col-12 mb-5">
-				<h3 class="text-center mt-4">Placera 4 av dina marker i en vertilal, horisontell eller diagonal rad!</h3>
+				<h3 class="text-center font-weight-bold mt-4">Placera 4 av dina marker i en vertikal, horisontell eller diagonal rad!</h3>
 			</div>
 		</div>
 
 
-			<!-- test-2 start -->
-
-
-
-			<div class="row">
-
-				<div class="col-12 col-md-4 mb-5">
-					<div class="card">
-						<!-- <div class="card" style="width: 20rem;"> -->
-						<img class="card-img-top" src="/img/rules/rules-2.png" alt="Card image cap">
-						<div class="card-body">
-							<h4 class="card-title">Klicka column</h4>
-							<p class="card-text">1. Värja färg. Tag 21 marker i samma färg.</p>
-							<p class="card-text">2. Stoppa första markern i valfri öppning på spelbrädet.</p>
-							<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-						</div>
-						<!-- </div> -->
+		<div class="row">
+			<div class="col-12 col-md-4 mb-5">
+				<div class="card">
+					<img class="card-img-top" src="/img/rules/rules-6.png" alt="Card image cap">
+					<div class="card-body">
+						<h4 class="card-title font-weight-bold text-center mb-4">Välj motståndare</h4>
+						<ul>
+							<li class="card-text">Välj markers färg och motståndare (person eller dator).</li>
+							<li class="card-text mt-3">En spelare har 21 markers.</li>
+							<li class="card-text mt-3">Spelarna turas om att placera 1 marker per drag.</li>
+						</ul>
 					</div>
+					<!-- </div> -->
 				</div>
-
-				<div class="col-12 col-md-4 mb-5">
-					<div class="card">
-						<!-- <div class="card" style="width: 20rem;"> -->
-						<img class="card-img-top" src="/img/rules/rules-3.jpg" alt="Card image cap">
-						<div class="card-body">
-							<h4 class="card-title">Kolla alla riktningar</h4>
-							<p class="card-text">3. Spelarna turas om att placera 1 marker per drag.</p>
-							<p class="card-text">4. Försök sätta en vinnande rad, samtidigt som du hindrar motspelaren från att vinna.</p>
-							<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-						</div>
-					</div>
-				</div>
-
-				<div class="col-12 col-md-4 mb-5">
-					<div class="card">
-						<img class="card-img-top" src="/img/rules/rules-1.png" alt="Card image cap">
-						<div class="card-body">
-							<h4 class="card-title">Resultet</h4>
-							<p class="card-text">5. Första spelaren som placerar fyra marker i rad vinner.</p>
-							<p class="card-text">6. Lyft brädet uppåt när spelet är över, så faller markerna ner i förvaringsasken.</p>
-							<a href="#" class="btn btn-warning text-light">Börja spela</a>
-						</div>
-					</div>
-				</div>
-
-
-				<!-- test-2 end -->
-
-
-				<!-- </div> -->
 			</div>
-			<!-- Ends of row -->
 
+			<div class="col-12 col-md-4 mb-5">
+				<div class="card">
+					<img class="card-img-top" src="/img/rules/rules-2.png" alt="Card image cap">
+					<div class="card-body">
+						<h4 class="card-title font-weight-bold text-center mb-4">Klick en kolumn eller plats</h4>
+						<ul>
+							<li class="card-text mt-3">När man klickar på en kolumn eller en plats faller en marker ner.</li>
+							<li class="card-text mt-3">Försök sätta en vinnande rad, samtidigt som du hindrar motspelaren från att vinna.</li>
+						</ul>
+						<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+					</div>
+				</div>
+			</div>
 
-
-
+			<div class="col-12 col-md-4 mb-5">
+				<div class="card">
+					<img class="card-img-top" src="/img/rules/rules-7.png" alt="Card image cap">
+					<div class="card-body">
+						<h4 class="card-title font-weight-bold text-center mb-4">Kolla alla riktningar</h4>
+						<ul>
+							<li class="card-text mt-3">
+								Första spelaren som placerar fyra marker i rad(vertikal, horisontell eller diagonal) vinner. Om markers är slut betyder det
+								oavgjort.
+							</li>
+						</ul>
+						<div>
+						<a href="#" class="btn btn-warning text-light font-weight-bold float-right mt-3"><span class="float-left pr-2">&#X1F3AE</span>Börja spela</a>
+					</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</main>
 
-
-
- <footer>
-      <div>
-        <p>Adress:</p>
-        <p>Kungsgatan 88</p>
-        <p>Malmö, Sweden</p>
-      </div>
-      <div>
-        <p>http://www.fourinalinegame.se</p>
-        <p>email: info@fourinalinegame.se</p>
-        <p>email: anja@fourinalinegame.se</p>
-      </div>
-      <div>
-        <p>Kontakt:  Anna Karlsson</p>
-        <p>Telefon:  +46(0)123456789</p>
-        <p>Mobil:    +46(0)123456789</p>
-      </div>
- 
-
+	<footer>
+		<div>
+			<p>Adress:</p>
+			<p>Kungsgatan 88</p>
+			<p>Malmö, Sweden</p>
+		</div>
+		<div>
+			<p>http://www.fourinalinegame.se</p>
+			<p>email: info@fourinalinegame.se</p>
+			<p>email: anja@fourinalinegame.se</p>
+		</div>
+		<div>
+			<p>Kontakt: Anna Karlsson</p>
+			<p>Telefon: +46(0)123456789</p>
+			<p>Mobil: +46(0)123456789</p>
+		</div>
 	</footer>
-
-
-
 
 
 	<!-- JavaScript libraries -->
