Updates på spel och hiscore sidor och klasser

--- a/www/spel.html
+++ b/www/spel.html
@@ -94,6 +94,7 @@
     <script src="/js/classes/base.class.js"></script>
     <script src="/js/classes/player.class.js"></script>
     <script src="/js/classes/game.class.js"></script>
+    <script src="/js/classes/hiscore.class.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
