--- a/www/hiscore.html
+++ b/www/hiscore.html
@@ -45,24 +45,15 @@
     <main>
       <article>
         <section class="container">
-          <div class="row mt-4">
-            <div class="col-8 mx-auto">
-              <ul class="list-group">
-                <li class="list-group-item d-flex justify-content-between align-items-center mt-2">
-                  Spelare 1
-                  <span class="badge badge-primary badge-pill">14</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center mt-2">
-                  Spelare 2
-                  <span class="badge badge-primary badge-pill">2</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center mt-2">
-                  Spelare 3
-                  <span class="badge badge-primary badge-pill">1</span>
-                </li>
-              </ul>
+          <div class="score">
+            <div class="row mt-4">
+              <div class="col-8 mx-auto">
+                <ul class="list-group mt-4 score-list">
+                </ul>
+              </div>
             </div>
           </div>
+
         </section>
       </article>
     </main>
@@ -93,6 +84,7 @@
     <script src="/js/classes/base.class.js"></script>
     <script src="/js/classes/player.class.js"></script>
     <script src="/js/classes/game.class.js"></script>
+    <script src="/js/classes/hiscore.class.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
