Update av start sida

--- a/www/index.html
+++ b/www/index.html
@@ -44,30 +44,32 @@
     </header>
     <main>
       <article>
-        <section class="container-fluid">
+        <section class="container">
           <div class="row">
-              <div class="jumbotron col mt-5 ml-5">
-                <h1 class="display-3">Välkommen!</h1>
-                <hr class="my-4">
-                <p>Spela det klassiska spelet 4 i rad online!</p>
-                <p class="lead">
-                  <a class="btn btn-light mt-4 float-right btn-lg" href="#" role="button">Spela!</a>
-                </p>
+            <div class="jumbotron col-6 mt-5">
+              <h1 class="display-3">Välkommen!</h1>
+              <hr class="my-4">
+              <p>Spela det klassiska spelet 4 i rad online!</p>
+              <p class="lead">
+                <a class="btn btn-light mt-4 float-right btn-lg" href="#" role="button">Spela!</a>
+              </p>
+            </div>
+            <div class="col-6">
+              <div class="fyrairadimg mt-5">
+                <img class="w-75 img-fluid" src="/img/fyrairad.png">
               </div>
-            <div class="col">
-              <div class="fyrairadimg mt-5 mr-4">
-                <img src="/img/fyrairad.png">
-              </div>
+
             </div>
           </div>
-          <div class="row w-25">
-            <div class="buttonsnav col mt-5 ml-5 mr-5 pl-5 bg-secondary">
+          <div class="row">
+            <div class="buttonsnav col-12 mt-2 bg-secondary">
               <h1>Andra spel online!</h1>
                 <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 1</button>
                 <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 2</button>
                 <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 3</button>
             </div>
           </div>
+
         </section>
       </article>
     </main>
