scripts för javascript lagt till

--- a/www/rules.html
+++ b/www/rules.html
@@ -161,7 +161,11 @@
 	<script src="/js/libs/popper-1.11.0.js"></script>
 	<script src="/js/libs/bootstrap-4-beta.js"></script>
 	<!-- Application specific JavaScript -->
-	<script src="/js/main.js"></script>
+	<script src="/js/classes/base.class.js"></script>
+  <script src="/js/classes/player.class.js"></script>
+  <script src="/js/classes/game.class.js"></script>
+  <script src="/js/classes/hiscore.class.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
