--- a/www/spel.html
+++ b/www/spel.html
@@ -57,7 +57,7 @@
     </article>
   </main>
 
- <footer class="container-fluid bg-secondary">
+ <footer class="container-fluid bg-secondary mb-0">
       
         <div class="row col-12">
 
